--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,15 @@ email: "evr9@aber.ac.uk"
 
 theme: "minima"
 
+rss: rss
+
 kramdown:
   syntax_highlighter_opts:
     disable: true
+    
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
 
 titles_from_headings:
   strip_title: true
@@ -21,4 +27,3 @@ defaults:
       type: post
     values:
       tags: Other
-      
