Update _config.yml for credit

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: "CS39440"
 author: "Evan Rees"
-description: "Example Description"
-# Update this
+description: "Blog template from https://chadbaldwin.net/2021/03/14/how-to-build-a-sql-blog.html"
 
 email: "evr9@aber.ac.uk"
 
